Change class names to 'btn..'name'

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <div class="total" value="0">0</div>
-      <button class="clear light-gray" value="">C</button>
-      <button class="plus-negative light-gray" name="+/-">
+      <button class="btn-clear light-gray" value="">C</button>
+      <button class="btn-plus-negative light-gray" name="+/-">
         &#43; / &minus;
       </button>
       <button class="btn-percent light-gray" name="%">%</button>
