Added a delete button, first & sec opreands

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="total" value="0">0</div>
+      <div class="total">
+        <div class="firstOperand" value="0">0</div>
+        <div class="secondOperand"></div>
+      </div>
       <button class="btn-clear light-gray" value="">C</button>
       <button class="btn-plus-negative light-gray" name="+/-">
         &#43; / &minus;
@@ -31,6 +34,7 @@
       <button class="btn-0 dark-gray" value="0">0</button>
       <button class="btn-decimal dark-gray" value=".">.</button>
       <button class="btn-equal orange" name="=">=</button>
+      <button class="orange delete">DEL</button>
     </div>
     <script src="/app.js"></script>
   </body>
