--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="total" value="0">0
+      <div class="total" value="0">
         <div class="firstOperand"></div>
         <div class="secondOperand"></div>
       </div>
@@ -37,5 +37,6 @@
       <button class="orange delete">DEL</button>
     </div>
     <script src="/app.js"></script>
+    <script src="/test.js"></script>
   </body>
 </html>
