removed spaces between operators

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         &#43; / &minus;
       </button>
       <button class="btn-percent light-gray" value=" % ">%</button>
-      <button class="btn-divide orange" value=" / ">&divide;</button>
+      <button class="btn-divide orange operators" value=" / ">&divide;</button>
       <button class="btn-7 dark-gray num" value="7">7</button>
       <button class="btn-8 dark-gray num" value="8">8</button>
       <button class="btn-9 dark-gray num" value="9">9</button>
-      <button class="btn-multiply orange" value=" * ">x</button>
+      <button class="btn-multiply orange operators" value="*">x</button>
       <button class="btn-4 dark-gray num" value="4">4</button>
       <button class="btn-5 dark-gray num" value="5">5</button>
       <button class="btn-6 dark-gray num" value="6">6</button>
-      <button class="btn-minus orange" value=" - ">-</button>
+      <button class="btn-minus orange operators" value=" - ">-</button>
       <button class="btn-1 dark-gray num" value="1">1</button>
       <button class="btn-2 dark-gray num" value="2">2</button>
       <button class="btn-3 dark-gray num" value="3">3</button>
-      <button class="btn-plus orange" value=" + ">+</button>
+      <button class="btn-plus orange operators" value="+">+</button>
       <button class="btn-0 dark-gray num" value="0">0</button>
       <button class="btn-decimal dark-gray">.</button>
       <button class="btn-equal orange" name="=">=</button>
